--- a/mtf-fi-69.html
+++ b/mtf-fi-69.html
@@ -23,7 +23,47 @@
   <p>Докладная записка начальнику Службы безопасности ████████ ████████████.<br>
   Копия выслана начальнику Службы логистики █████ ███████████.</p>
 
-  <p>По запросу Др. Черкасова, вооружить и укомплектовать новую МОГ</p>
+  <p>По запросу Др. Черкасова, вооружить и укомплектовать новую МОГ под обозначением Фи-69, для работы в условиях повышенного стресса для репродуктивной и нервной системы бойца.</p>
+  <hr>
+  <h4>Вооружение:</h4>
+<ul>
+  <li>Пистолеты: HK USP (.45 ACP).</li>
+  <li>Автоматы: СР-3М, АК-12.</li>
+  <li>Полуавтоматическое ружье Сайга 12К «Тактика» исполнение 040.</li>
+  <li>Тяжелое вооружение: гранатометы ГМ-94 и РГ-6, РПГ-29 «Вампир».</li>
+  <li>Осколочные гранаты РГО и РГН.</li>
+  <li>Специальные гранаты: светозвуковые «Взлет-М» и «Факел-С».</li>
+  <li>Подрывные заряды различного назначения, мины и инженерные боеприпасы.</li>
+  <li>Подводное оружие: автомат АДС, пистолет СПП-1М.</li>
+</ul>
+<h4>Особое снаряжение:</h4>
+<ul>
+  <li>ппп</li>
+  <li>ыыав</li>
+</ul>
+<h4>Дополнительное снаряжение:</h4>
+<ul>
+  <li>Костюмы РХБЗ, противогазы, фильтрующие и замкнутого цикла. Средства радиационной и химической разведки.</li>
+  <li>Снаряжение для штурмового альпинизма (беседки, карабины, веревки, спусковые и подъемные устройства).</li>
+  <li>Средства связи (радиостанции, носимые станции спутниковой связи).</li>
+  <li>Индивидуальные аптечки  и травмкомплекты.</li>
+  <li>Приборы ночного видения.</li>
+  <li>Нашлемные видеокамеры.</li>
+  <li>Стандартные диодные и инфракрасные фонари.</li>
+  <li>Навигационные средства (в т.ч. спутниковые).</li>
+  <li>Прибор для чрезстенного обнаружения признаков жизни Xaver 400.</li>
+  <li>Прибор для чрезстенной визуализации для сбора данных, наблюдения и разведки XAVER 800.</li>
+  <li>Средства меметической и психической защиты.</li>
+  <li>Базовый набор амнезиаков.</li>
+</ul>
+<h4>Средства бронезащиты:</h4>
+<ul>
+  <li>Шлем 545D-БШС-ML-AFG “Спартанец”</li>
+  <li>Бронежилет Шилд 2-2 УНИ “Миротворец”</li>
+</ul>
+___
+Дата: 12 марта 2021
+Подпись: ██████ ██████
 </div>
 
 <p><strong>Отчёты об операциях:</strong> </p>
