--- a/mtf-fi-69.html
+++ b/mtf-fi-69.html
@@ -17,7 +17,7 @@
 <div style="width: 200px;margin: 1em auto;"><img src="https://i.ibb.co/6trJbgG/Fi-69.png" width='100%' alt="Fi-69" border="0"></div>
 
 <p style="text-align: center;"><strong>Мобильная оперативная группа Фи-69 "Виагра"</p>
-<p>Миссия оперативной группы:</strong> Миссия оперативной группы: Мобильная оперативная группа Фи-69 работает под юрисдикцией ОУС (ДСА) и используется для постановления на содержание или восстановления условий содержания аномалий представляющих сексуальную угрозу. Штат бойцов также подготовлен для встречи с ГУС розового типа.</p>
+<p>Миссия оперативной группы:</strong> Мобильная оперативная группа Фи-69 работает под юрисдикцией ОУС (ДСА) и используется для постановления на содержание или восстановления условий содержания аномалий представляющих сексуальную угрозу. Штат бойцов также подготовлен для встречи с ГУС розового типа.</p>
 <h3>Снаряжение</h3>
 <div class="document">
   <p>Докладная записка начальнику Службы безопасности ████████ ████████████.<br>
@@ -38,8 +38,20 @@
 </ul>
 <h4>Особое снаряжение:</h4>
 <ul>
-  <li>ппп</li>
-  <li>ыыав</li>
+  <li>Питьевая вода 2л..</li>
+  <li>Сухой паёк "ИРП-С".</li>
+  <li>Безникотиновые сигареты "Нирдош".</li>
+  <li>Ультрапрочные презервативы специальные "Precaution+" (ребристые, классические, с продлевающим эффектом).</li>
+  <li>Ультрапрочные презервативы специальные "Precaution+" (ребристые, классические, с продлевающим эффектом).</li>
+  <li>Лубрикант 1л.</li>
+  <li>Сверхпрочные наручники и цепь 3м.</li>
+  <li>Намордник для гуманоидов из спидроина I.</li>
+  <li>Намордник для собакообразных из спидроина I.</li>
+  <li>Стальные рестрикторы для конечностей.</li>
+  <li>Кожаная плеть-девятихвостка («кошка»).</li>
+  <li>Кевларовый ошейник и прорезиненный поводок 2м.</li>
+  <li>Кляп-маска из спидрона II.</li>
+  <li>Термический комбенизон защитный, противодеформационный.</li>
 </ul>
 <h4>Дополнительное снаряжение:</h4>
 <ul>
@@ -61,9 +73,9 @@
   <li>Шлем 545D-БШС-ML-AFG “Спартанец”</li>
   <li>Бронежилет Шилд 2-2 УНИ “Миротворец”</li>
 </ul>
-___
-Дата: 12 марта 2021
-Подпись: ██████ ██████
+<p>___<br>
+Дата: 12 марта 2021<br>
+Подпись: ██████ ██████</p>
 </div>
 
 <p><strong>Отчёты об операциях:</strong> </p>
