--- a/mtf-fi-69.html
+++ b/mtf-fi-69.html
@@ -23,7 +23,7 @@
   <p>Докладная записка начальнику Службы безопасности ████████ ████████████.<br>
   Копия выслана начальнику Службы логистики █████ ███████████.</p>
 
-  <p>По запросу Др. Черкасова, вооружить и укомплектовать новую МОГ под обозначением Фи-69, для работы в условиях повышенного стресса для репродуктивной и нервной системы бойца.</p>
+  <p>По запросу Др. Черкасова, вооружить и укомплектовать новую МОГ под обозначением Фи-69, для работы в условиях повышенного стресса на репродуктивную и нервную системы бойца. Список был составлен с учетом специфики работы, но базовая экипировка осталось практически не тронутой.</p>
   <hr>
   <h4>Вооружение:</h4>
 <ul>
@@ -74,11 +74,12 @@
   <li>Бронежилет Шилд 2-2 УНИ “Миротворец”</li>
 </ul>
 <p>___<br>
-Дата: 12 марта 2021<br>
+Дата: 25 сентября 2021<br>
 Подпись: ██████ ██████</p>
 </div>
 
-<p><strong>Отчёты об операциях:</strong> </p>
+<h4>Отчёты об операциях:</h4>
+<p>Список будет пополняться</p>
 <!-- Энд база -->
 <hr>
 <div style="text-align: center;font-size:80%; font-weight: bolder;">
