--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -38,7 +38,7 @@
   <a href="/tough-duty">Нелегкий труд</a>
 
 <h3>И что всё это значит?</h3>
-<p>Данный хаб является неофицальным ответвлением основного лора FunClub'а, в основном УВС-19F (Hard RP). Это место для самых похотливых идей игроков SL; как и Фонд, мы их каталогизируем, классифицируем и содержим на нашем сайте и <span style="text-decoration: line-through;">в штанах</span> в сердце. Если хотите, чтобы ваш рассказ или статья стали частью общей вселенной, присылайте их - PRINCE#8040 (Учтите, он должен быть написан грамотно и вписываться в концепцию секс-фонда).</p>
+<p>Данный хаб является неофицальным ответвлением основного лора FunClub'а, в основном УВС-19F (Hard RP). Это место для самых похотливых идей игроков SCP:SL; как и Фонд, мы их каталогизируем, классифицируем и содержим на нашем сайте и <span style="text-decoration: line-through;">в штанах</span> в сердце. Если хотите, чтобы ваш рассказ или статья стали частью общей вселенной, присылайте их - PRINCE#8040 (Учтите, они должны быть написаны грамотно и вписываться в концепцию секс-фонда).</p>
 
 <!-- Благодарности !-->
 <div class='thanks'>
