--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -59,7 +59,7 @@
   <div class='special-thanks'><div class='avatar'><img src="https://i.ibb.co/Rg3tmTX/yjjx.png" alt="yjjx" border="0" width='100%'></div>
    <div><h4>YJJX</h4><p>Не смотря на все возможные последствия, не побоялся! За вклад в общее дело.</p></div>
   </div>
-
+<div style='width: 50%;max-width: 150px;'><img src="https://i.ibb.co/T8gcmRd/NSFW.png" width='100%' alt="NSFW" border="0"></div>
 </div>
 <!-- Important !-->
 <script src="scp-939-s-ex.js"></script>
