--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -32,11 +32,28 @@
 <!-- scp !-->
 <h3>Представленные SCP объекты:</h3>
 <a href='/scp-939-s-ex'>SCP-939-S-EX - Со множеством голосов, и не только</a>
+<div class='thanks'style='text-align: center;'>
+  <h2 style="color: #bb0065;">Сборник рассказов хаба</h2>
+  <hr>
+  <h3>Цикл 0: Интерес</h3>
+  <div style='display: flex;'>
+    <a></a>
+  </div>
+  <hr>
+  <h3>Цикл 1: Прелюдия</h3>
+  <div style='display: flex;'>
+    <a></a>
+  </div>
+  <hr>
+  <h3>Цикл 2: Плато</h3>
+  <div style='display: flex;'>
+    
+    <p><a href='/code-pink'>Код "Розовый"</a><br><span style='font-style: italic;'>Автор: AlexandrHell</span></p>
 
-<h3>Сборник рассказов хаба:</h3>
-  <a href='/code-pink'>Код "Розовый"</a><br>
-  <a href="/tough-duty">Нелегкий труд</a>
+    <p><a href="/tough-duty">Нелегкий труд</a><br><span style='font-style: italic;'>Автор: AlexandrHell</span></p>
 
+  </div>
+</div>
 <h3>И что всё это значит?</h3>
 <p>Данный хаб является неофицальным ответвлением основного лора FunClub'а, в основном УВС-19F (Hard RP). Это место для самых похотливых идей игроков SCP:SL; как и Фонд, мы их каталогизируем, классифицируем и содержим на нашем сайте и <span style="text-decoration: line-through;">в штанах</span> в сердце. Если хотите, чтобы ваш рассказ или статья стали частью общей вселенной, присылайте их - PRINCE#8040 (Учтите, они должны быть написаны грамотно и вписываться в концепцию секс-фонда).</p>
 
