--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -46,7 +46,7 @@
   </div>
   <hr>
   <h3>Цикл 2: Плато</h3>
-  <div style='display: flex;'>
+  <div class='story-center'>
     
     <p><a href='/code-pink'>Код "Розовый"</a><br><span style='font-style: italic;'>Автор: AlexandrHell</span></p>
 
