--- a/mtf-fi-69.html
+++ b/mtf-fi-69.html
@@ -23,12 +23,12 @@
   <p>Докладная записка начальнику Службы безопасности ████████ ████████████.<br>
   Копия выслана начальнику Службы логистики █████ ███████████.</p>
 
-  <p>По запросу Др. Черкасова, вооружить и укомплектовать новую МОГ под обозначением Фи-69, для работы в условиях повышенного стресса на репродуктивную и нервную системы бойца. Список был составлен с учетом специфики работы, но базовая экипировка осталось практически не тронутой.</p>
+  <p>По запросу Др. Волкова, вооружить и укомплектовать новую МОГ под обозначением Фи-69, для работы в условиях повышенного стресса на репродуктивную и нервную системы бойца. Список был составлен с учетом специфики работы, но базовая экипировка осталось практически не тронутой.</p>
   <hr>
   <h4>Вооружение:</h4>
 <ul>
   <li>Пистолеты: HK USP (.45 ACP).</li>
-  <li>Автоматы: СР-3М, АК-12.</li>
+  <li>Автоматы: СР-3М, АК-12, E-11-SR</li>
   <li>Полуавтоматическое ружье Сайга 12К «Тактика» исполнение 040.</li>
   <li>Тяжелое вооружение: гранатометы ГМ-94 и РГ-6, РПГ-29 «Вампир».</li>
   <li>Осколочные гранаты РГО и РГН.</li>
@@ -38,10 +38,9 @@
 </ul>
 <h4>Особое снаряжение:</h4>
 <ul>
-  <li>Питьевая вода 2л..</li>
+  <li>Питьевая вода 5л.</li>
   <li>Сухой паёк "ИРП-С".</li>
   <li>Безникотиновые сигареты "Нирдош".</li>
-  <li>Ультрапрочные презервативы специальные "Precaution+" (ребристые, классические, с продлевающим эффектом).</li>
   <li>Ультрапрочные презервативы специальные "Precaution+" (ребристые, классические, с продлевающим эффектом).</li>
   <li>Лубрикант 1л.</li>
   <li>Сверхпрочные наручники и цепь 3м.</li>
