--- a/code-pink.html
+++ b/code-pink.html
@@ -11,7 +11,7 @@
 <div class='header'>
   <div class='logo-header'><img src="https://i.ibb.co/93Xb6Rb/IMG-1176.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>SCP Foundation</div><div class='text-header1'>Sex Curious Project</div></div>
 </div>
-<div style='max-width: 850px;margin: auto;'><h1>Код "Розовый"</h1>
+<div style='max-width: 850px;margin: auto;'><h1>Объявлен код "Розовый"!</h1>
 <p>Равномерный стук в иллюминатор вертолёта крупных каплей дождя почти сводил с ума, но к нему можно привыкнуть. Отряд из семи бойцов включая командира, молча сидел на своих местах и каждый, смотря в пустоту, думал о чём-то своём. В комплексе, куда направлялся данный вертолёт, примерно 10 минут назад автоматической системой безопасности был отправлен сигнал тревоги, больше информации от комплекса не было, ни запросов, ни отчётов, ни докладов службы безопасности… ничего. У бойцов было скверное настроение, они летят в неизвестность, их задача зайти в комплекс и выяснить, что там произошло, зная специфику объектов поставленных на содержание в фонде, ситуация могла развиться самым непредсказуемым образом. Капитан решил подбодрить своих бойцов и воскликнул, пытаясь перекричать гул вертолёта: "А чо это мы такие грустные? Надеюсь, вы хорошо поужинали бойцы! Потому что завтракать мы будем в АДУ! Ха-ха-ха-ха."</p>
 
 <p>Отряд одновременно и монотонным голосом ответил: "Есть сэр, да сэр!", - Того требовала субординация, но у каждого было тайное желание врезать по этой наглой морде, с такими шутками далеко не уедешь.</p>
@@ -27,20 +27,11 @@
 <p>Пока капитан делал стандартный доклад в центр, о том, что мы прибыли и пытался узнать какую-нибудь информацию, все стояли и проверяли снаряжение, кто-то регулировал шлем, кто-то проверял спусковой механизм оружия, а кто-то просто ковырялся в носу, да вот он отряд элитных бойцов. Закончив со своей прелюдией перед центром капитан стандартными фразами напомнил нам о текущей задаче и общей ситуации в комплексе, как будто мы до этого не знали, но того требовали инструкции…</p>
 
 <p>Выкрикнув своё типичное: "И главное помните, кто умрёт с полной обоймой, то после операции я трахну его труп! За мной!", - На тот момент мы и представить не могли, что роль первого двухсотого в нашем отряде была отведена, как раз капитану…</p>
-<hr>
-<p>Оперативник шёл по длинным, тёмным коридорам, тусклый свет тактического фонарика,  то и дело облизывал тёмные неподвижные силуэты, это были тела людей или части от них. В рации тихо шумели помехи и изредка звучали отрывистые фразы "центр, я  двухсотый" и за ними, как правило, следовали нечеловеческие вопли, а далее снова равномерные помехи. Центр молчал, на эти отчёты бойцов отвечал всегда сухо: "Понял, принял, вычеркиваю."</p>
 
-<p>В гробовой тишине были слышны только равномерные удары сердца оперативника и глухое эхо от шагов. И тут резко от центра поступила команда: - "Выжившим оперативникам мобильной оперативной группы,  SCP-939  на верхнем ярусе, офисная зона, код угрозы - розовый, срочно применить все меры для сдерживания."</p>
-
-<p>Тихо, но уверенно, холодным голосом, он ответил - "принято к исполнению".</p>
-
-<p>Обострились все его чувства. Случайный прохладный порыв сквозняка обдул его взмокшую шею, где-то вдалеке послышался очередной нечеловеческий вопль, который превратился, в отвратительное бульканье… Оперативник разрядил свою штурмовую винтовку и кинул её на пол, она ему больше не нужна, в тишине темного коридора раздался звонкий звук её удара об пол. У него участился пульс, он знал, что сейчас или никогда, выход один или он остановит эту тварь здесь и сейчас либо все было напрасно.</p>
-
-<p>Оперативник медленно расстегнул крепление на своём шлеме, снял и с глухим ударом бросил его на пол, шлем ему мешал, сужал обзор, а охотник должен далеко видеть свою добычу, щёлкнули крепления бронежилета, он сжимал его грудь, мешал дышать и двигаться, а ведь охотник должен, быть проворным, он так же был сброшен на пол, финальным своим резким движением оперативник стянул штаны, передёрнул затвор своего самого надежного ствола и проронив последние слова: "Ну… поехали…", - Он двинулся уверенной походкой во тьму, на звук тяжёлых шагов…</p>
 <p style='font-size:70%; text-align:right;'><strong>Автор:</strong> Alexandr Hell
 <hr>
-<div style="text-align: center;">
-<p><span style="font-size:80%; font-weight: bolder;">Код "Розовый" | <a href='/tough-duty'>Нелегкий труд</a> »</span></p></div>
+<div style="text-align: center;font-size:80%; font-weight: bolder;">
+<p>« <a href='/nsfw-hub'>Главная</a> | Часть 1: "Прибытие" | <a href='/code-pink-2'>Часть 2: "Влечение"</a> »</p></div>
 
 </div>
 </body>
