--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -30,8 +30,10 @@
   <p><strong>Назначенные МОГ:</strong> МОГ Эпсилон-11 ("Девятихвостая лиса"), МОГ Альфа-1 ("Багрянная десница"), <a href='/mtf-fi-69'>МОГ Фи-69 ("Виагра").</a></p></div>
 </div>
 <!-- scp !-->
+
 <h3>Представленные SCP объекты:</h3>
 <a href='/scp-939-s-ex'>SCP-939-S-EX - Со множеством голосов, и не только</a>
+
 <div class='thanks'style='text-align: center;'>
   <h2 style="color: #bb0065;">Сборник рассказов хаба</h2>
   <hr>
@@ -48,7 +50,7 @@
   <h3>Цикл 2: Плато</h3>
   <div class='story-center'>
     
-    <p><a href='/code-pink'>Код "Розовый"</a><br><span style='font-style: italic;'>Автор: AlexandrHell</span></p>
+    <p><b><i>"Объявлен код "Розовый"!"</i></b><br><a href='/code-pink'>Часть 1: "Прибытие"</a> | <a href='/code-pink-2'>Часть 2: "Влечение"</a><br><i>Автор: AlexandrHell</i></p>
 
     <p><a href="/tough-duty">Нелегкий труд</a><br><span style='font-style: italic;'>Автор: AlexandrHell</span></p>
 
