--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -64,7 +64,7 @@
   <h3>Особые благодарности:</h3>
 
   <div class='special-thanks'><div class='avatar'><img src="https://i.ibb.co/n8GY2Ns/saylon.png" width='100%' alt="saylon" border="0"></div>
-    <div><h4>SAYLON</h4><p>За изобритательность и находчиваость, именно он подарил название ОУС (ДСА) - Sex Curious Project. За развитие и вклад.</p></div>
+    <div><h4>SAYLON</h4><p>За изобретательность и находчиваость, именно он подарил название ОУС (ДСА) - Sex Curious Project. За развитие и вклад.</p></div>
   </div>
 
   <div class='special-thanks'><div class='avatar'><img src="https://i.ibb.co/3MZJ1tj/kolers.png" alt="kolers" border="0" width='100%'></div>
