--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -59,12 +59,16 @@
 <h3>И что всё это значит?</h3>
 <p>Данный хаб является неофицальным ответвлением основного лора FunClub'а, в основном УВС-19F (Hard RP). Это место для самых похотливых идей игроков SCP:SL; как и Фонд, мы их каталогизируем, классифицируем и содержим на нашем сайте и <span style="text-decoration: line-through;">в штанах</span> в сердце. Если хотите, чтобы ваш рассказ или статья стали частью общей вселенной, присылайте их - PRINCE#8040 (Учтите, они должны быть написаны грамотно и вписываться в концепцию секс-фонда).</p>
 
-<!-- Благодарности !-->
+<!-- Благодарности !-->https://cdn.discordapp.com/attachments/821119948755697737/1095287262050258984/cd17e96036594e32.png
 <div class='thanks'>
   <h3>Особые благодарности:</h3>
 
   <div class='special-thanks'><div class='avatar'><img src="https://i.ibb.co/n8GY2Ns/saylon.png" width='100%' alt="saylon" border="0"></div>
     <div><h4>SAYLON</h4><p>За изобретательность и находчиваость, именно он подарил название ОУС (ДСА) - Sex Curious Project. За развитие и вклад.</p></div>
+  </div>
+
+  <div class='special-thanks'><div class='avatar'><img src="https://i.ibb.co/Jq4vp66/plan.png" width='100%' alt="saylon" border="0"></div>
+    <div><h4>[Djoe™]</h4><div style='width:10px'><img src='https://cdn.discordapp.com/attachments/821119948755697737/1095287262050258984/cd17e96036594e32.png' border='0' width='100%'></div></div>
   </div>
 
   <div class='special-thanks'><div class='avatar'><img src="https://i.ibb.co/3MZJ1tj/kolers.png" alt="kolers" border="0" width='100%'></div>
