--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -59,7 +59,7 @@
 <h3>И что всё это значит?</h3>
 <p>Данный хаб является неофицальным ответвлением основного лора FunClub'а, в основном УВС-19F (Hard RP). Это место для самых похотливых идей игроков SCP:SL; как и Фонд, мы их каталогизируем, классифицируем и содержим на нашем сайте и <span style="text-decoration: line-through;">в штанах</span> в сердце. Если хотите, чтобы ваш рассказ или статья стали частью общей вселенной, присылайте их - PRINCE#8040 (Учтите, они должны быть написаны грамотно и вписываться в концепцию секс-фонда).</p>
 
-<!-- Благодарности !-->https://cdn.discordapp.com/attachments/821119948755697737/1095287262050258984/cd17e96036594e32.png
+<!-- Благодарности !-->
 <div class='thanks'>
   <h3>Особые благодарности:</h3>
 
