--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -67,8 +67,8 @@
     <div><h4>SAYLON</h4><p>За изобретательность и находчиваость, именно он подарил название ОУС (ДСА) - Sex Curious Project. За развитие и вклад.</p></div>
   </div>
 
-  <div class='special-thanks'><div class='avatar'><img src="https://i.ibb.co/Jq4vp66/plan.png" width='100%' alt="saylon" border="0"></div>
-    <div><h4>[Djoe™]</h4><div style='width:10px'><img src='https://cdn.discordapp.com/attachments/821119948755697737/1095287262050258984/cd17e96036594e32.png' border='0' width='100%'></div></div>
+  <div class='special-thanks'><div class='avatar'><img src="https://i.ibb.co/D5h0FM5/djoe.png" width='100%' alt="saylon" border="0"></div>
+    <div><h4>[Djoe™]</h4><div style='width:100%;margin: 1em 0;'><img src='https://cdn.discordapp.com/attachments/821119948755697737/1095287262050258984/cd17e96036594e32.png' border='0' width='100%'></div></div>
   </div>
 
   <div class='special-thanks'><div class='avatar'><img src="https://i.ibb.co/3MZJ1tj/kolers.png" alt="kolers" border="0" width='100%'></div>
