--- a/mtf-fi-69.html
+++ b/mtf-fi-69.html
@@ -28,17 +28,19 @@
   <h4>Вооружение:</h4>
 <ul>
   <li>Пистолеты: HK USP (.45 ACP).</li>
-  <li>Автоматы: СР-3М, АК-12, E-11-SR</li>
   <li>Полуавтоматическое ружье Сайга 12К «Тактика» исполнение 040.</li>
-  <li>Тяжелое вооружение: гранатометы ГМ-94 и РГ-6, РПГ-29 «Вампир».</li>
+  <li>Пистолеты пулеметы H&K MP-7, TDI Kriss vector, ПП-19-01 «Витязь», ПП-19 "Бизон-2".</li>
   <li>Осколочные гранаты РГО и РГН.</li>
   <li>Специальные гранаты: светозвуковые «Взлет-М» и «Факел-С».</li>
   <li>Подрывные заряды различного назначения, мины и инженерные боеприпасы.</li>
-  <li>Подводное оружие: автомат АДС, пистолет СПП-1М.</li>
 </ul>
 <h4>Особое снаряжение:</h4>
 <ul>
   <li>Питьевая вода 5л.</li>
+  <li>Ароматические свечи (Фруктовые, цветочные, кровянные).</li>
+  <li>Фалоимитаторы различной длинны и диаметров.</li>
+  <li>Вибрирующие стимуляторы.</li>
+  <li>Накладные кошачьи ушки.</li>
   <li>Сухой паёк "ИРП-С".</li>
   <li>Безникотиновые сигареты "Нирдош".</li>
   <li>Ультрапрочные презервативы специальные "Precaution+" (ребристые, классические, с продлевающим эффектом).</li>
