--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -31,8 +31,9 @@
 </div>
 <!-- scp !-->
 
-<h3>Представленные SCP объекты:</h3>
-<a href='/scp-939-s-ex'>SCP-939-S-EX - Со множеством голосов, и не только</a>
+<h2 style='color: crimson;'>Представленные SCP объекты:</h2><ul>
+  <li><a href='/scp-939-s-ex'>SCP-939-S-EX - Со множеством голосов, и не только</a></li>
+</ul>
 
 <div class='thanks'style='text-align: center;'>
   <h2 style="color: #bb0065;">Сборник рассказов хаба</h2>
