--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -40,7 +40,7 @@
   <hr>
   <h3>Цикл 0: Интерес</h3>
   <div style='display: flex;'>
-    <a></a>
+    <p><a href='/the-perspective'>"Перспектива"</a><br><i>Автор: PRINCE</i></p>
   </div>
   <hr>
   <h3>Цикл 1: Прелюдия</h3>
