--- a/the-perspective.html
+++ b/the-perspective.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.8" />
   <link rel="stylesheet" href="code-pink.css">
   <link rel="icon" href="https://i.ibb.co/93Xb6Rb/IMG-1176.png">
-  <title>Код "Розовый"</title>
+  <title>Перспектива</title>
 </head>
 <html>
 <body>
@@ -14,9 +14,9 @@
 <div style='max-width: 850px;margin: auto;'><h1>Перспектива</h1>
 <p>"Вы предлагаете что?" - мужчина в сером смокинге в недоумении разломил карандаш на две части; в полной тишине, они со звоном упали на пол. Рядом сидел другой мужчина, одет он был не менее строго, и, оперевшись головой об руку, о чем то думал. На момент в зале стало настолько тихо, что можно было услышать, как размеренно идут наручные часы одного из председателей комитета, но только на момент. В середине зала стоял человек в халате, на его лице читалось смятение, он слегка ослабил свой воротник и продолжил:</p>
 
-<p> "Я повторюсь, создание данного отдела представляет экономический и материальный интерес, не говоря уже о том, что существует невероятное множество подобных аномалий, и просто нейтрализовывать их все, противоречит мотивации Фонда, не считаете?", - Председатель нахмурился.</p>
+<p>"Я повторюсь, создание данного отдела представляет экономический и материальный интерес, не говоря уже о том, что существует невероятное множество подобных аномалий, и просто нейтрализовывать их все, противоречит мотивации Фонда, не считаете?", - Председатель нахмурился.</p>
 
-<p>“Уничтожение объектов хоть и не является приоритетом организации, но мы не можем позволить себе содержать все аномалии мира, приходиться жертвовать некоторыми. Подобные аномалии - среди первых в этом списке.” - </p>
+<p>“Уничтожение объектов хоть и не является приоритетом организации, но мы не можем позволить себе содержать все аномалии мира, приходиться жертвовать некоторыми. Подобные аномалии - среди первых в этом списке.”</p>
 
 <p>Сидящий рядом член комитета, разминая пальцы, добавил: “К тому же, большинство подобных аномалий не имеет потенциала дальнейшего использования, мы все равно на выгодных условиях передаем их ГОК, а их дальнейшая судьба нас мало волнует.”</p>
 
