--- a/nsfw-hub.html
+++ b/nsfw-hub.html
@@ -13,7 +13,7 @@
 </div>
 <div style='max-width: 850px;margin: auto;'><h1>Хаб "NSFW"</h1>
 
-<div style="padding: 10px;background: transparent;border: solid 3px crimson;display: flex;margin: 1em 0;"><img src="https://img.freepik.com/premium-vector/18-age-restriction-sign-prohibited-under-eighteen-years-red-symbol-vector-illustration_6343-516.jpg?w=360"><div><h2>ПРЕДУПРЕЖДЕНИЕ</h2><p>Представленный текстовый и графический контент не рекомендуется к ознакомлению дицам младше 18 лет. Также (наверное, это очевидно) NSFW.</p></div>
+<div style="padding: 10px;background: transparent;border: solid 3px crimson;flex-direction: row;justify-content: center;flex-wrap: nowrap;display: flex;margin: 1em 0;"><div style='width: 100px;'><img width='100%' src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/RARS_18%2B.svg/2048px-RARS_18%2B.svg.png"></div><div><h2>ПРЕДУПРЕЖДЕНИЕ</h2><p>Представленный текстовый и графический контент не рекомендуется к ознакомлению дицам младше 18 лет. Также (наверное, это очевидно) NSFW.</p></div>
 </div>
 
 <div style='width: 250px;margin: 1em auto;'><img src="https://i.ibb.co/yytQ8Yr/SCP-SAD.png" alt="SCP-SAD" border="0" width="100%"></div>
