--- a/flx-hrp/lisitsyn.html
+++ b/flx-hrp/lisitsyn.html
@@ -13,15 +13,16 @@
   <div class='logo-header'><img src="https://i.ibb.co/dW67VT2/lrp-big.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>SCP Foundation</div><div class='text-header1'>Российский Филиал</div></div>
 </div>
 <!-- BASED !-->
-<div style='max-width: 850px;margin: auto;'><h1>Досье сотрудника: Лисицын Даниил</h1></div>
-<!-- SHEET !-->
-<div style="center no-repeat ; float: center; border: solid 2px #000000; padding: 1px 15px; margin: 10px 10px 10px 0px; box-shadow: 0 1px 3px rgba(0,0,0,0);max-width: 800px;margin: auto;">
+<div style='max-width: 850px;margin: auto;'><h1>Досье сотрудника: Лисицын Даниил</h1>
+ <!-- SHEET !-->
+ <div style="center no-repeat ; float: center; border: solid 2px #000000; padding: 1px 15px; margin: 10px 10px 10px 0px; box-shadow: 0 1px 3px rgba(0,0,0,0);max-width: 800px;margin: auto;">
   k
-</div>
-<!-- LOWER !-->
-<hr>
-<div style="text-align: center;">
-<p><span style="font-size:70%;">SECURE. CONTAIN. PROTECT.</span></p>
+ </div>
+ <!-- LOWER !-->
+ <hr>
+ <div style="text-align: center;">
+  <p><span style="font-size:70%;">SECURE. CONTAIN. PROTECT.</span></p>
+ </div>
 </div>
 <!-- FOOTER !-->
 </body>
