--- a/flx-hrp/lisitsyn.html
+++ b/flx-hrp/lisitsyn.html
@@ -3,14 +3,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=0.8" />
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="https://i.ibb.co/dW67VT2/lrp-big.png">
+  <link rel="icon" href="https://i.ibb.co/ZcBSgxt/flx-hrp.png">
   <title>Досье - Лисицын</title>
 </head>
 <html>
 <body>
 <!-- HEADER !-->
 <div class='header'>
-  <div class='logo-header'><img src="https://i.ibb.co/dW67VT2/lrp-big.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>SCP Foundation</div><div class='text-header1'>Российский Филиал</div></div>
+  <div class='logo-header'><img src="https://i.ibb.co/3mJ3G4h/logo.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>SCP Foundation</div><div class='text-header1'>Российский Филиал</div></div>
 </div>
 <!-- BASED !-->
 <div style='max-width: 850px;margin: auto;'><h1>Досье сотрудника: Лисицын Даниил</h1>
