--- a/flx-hrp/lisitsyn.html
+++ b/flx-hrp/lisitsyn.html
@@ -25,7 +25,7 @@
  <p><b>[ИНФОРМАЦИЯ ОБ УЧАСТИИ ЛИСИЦЫНА ДАНИИЛА В ОПЕРАЦИЯХ ФОНДА ЗАСЕКРЕЧЕНА ПОД ГРИФОМ СОВЕРШЕННО СЕКРЕТНО]</p>
  <p>[ПОДТВЕРДИТЬ ДОПУСК]</b></p>
  <p>По обстоятельствам, описанным в приложении 2, был смещен с поста оперативника и переназначен исследователем в научную службу. До сих пор, Лисицын работает в отделе пространственных проблем и аномальной геометрии на должности научного сотрудника. За время труда в отделе, Даниил работал со следующими объектами:</p>
- <p><div class='scp-class'><img src="https://files.scpfoundation.net/local--files/scp-list-ru/nonstandard.png" width='10px'></div>SCP-351-RU-V - Капкан</p>
+ <p><span class='scp-class'><img src="https://files.scpfoundation.net/local--files/scp-list-ru/nonstandard.png" width='12px'></span>SCP-351-RU-V - Капкан</p>
  <p>Является автором следующей документации:</p>
  <ul>
    <li>Ординарные пространственные аномалии</li>
