--- a/flx-hrp/scp-351-ru-v.html
+++ b/flx-hrp/scp-351-ru-v.html
@@ -3,9 +3,9 @@
   <link href="https://allfont.ru/allfont.css?fonts=bauhaus-bold-bt" rel="stylesheet" type="text/css" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=0.7" />
-  <link rel="stylesheet" href="scp-351-n.css">
+  <link rel="stylesheet" href="scp-351-ru-v.css">
   <link rel="icon" href="https://cdn.discordapp.com/attachments/904720639137566730/907540965810663424/scp-logo-ru-400-150x150.png">
-  <title>SCP-351-N - Капкан</title>
+  <title>SCP-351-RU-V - Капкан</title>
 </head>
 <html>
 <body>
@@ -15,7 +15,7 @@
 </div>
 <!--- Заглавие --->
 <div style='max-width: 850px;margin: auto;'>
-  <h1>SCP-351-N - Капкан</h1>
+  <h1>SCP-351-RU-V - Капкан</h1>
 <!--- База --->
 <div class='apcs-container'>
   <div class='apcs-main-content'>
@@ -33,14 +33,14 @@
       <div class='apcs-info-activation'>Нестабильный</div>
       <div class='apcs-info-risk'>Ȼ</div>
       <div class='apcs-info-vedist'>Vedist IV</div>
-      <div class="apcs-info-number">SCP-351-N</div>
+      <div class="apcs-info-number">SCP-351-RU-V</div>
     </div>
   </div>
 </div>
-<p><strong>Объект №:</strong> SCP-351-N</p>
+<p><strong>Объект №:</strong> SCP-351-RU-V</p>
 <p><strong>Особые условия содержания:</strong> Содержание невозможно ввиду специфики объекта. Полевые агенты фонда должны вести наблюдение в районах возможной активности объекта и докладывать о случаях похожих по описанию на поражение аномалией своему руководителю. На подтверждённые случаи уполномочены отвечать подразделения МОГ Lambda-5 "Белые кролики". За дезинформацию населения а так же за прикрытие в случае неудачной операции по пресечению аномалии несут ответственность агенты МОГ Gamma-5 "Ложный след".</p>
 
-<p><strong>Описание:</strong> SCP-351-N — </p>
+<p><strong>Описание:</strong> SCP-351-RU-V — </p>
 
 <!--- SCP --->
 <hr>
