--- a/flx-hrp/mod-sirya-220420.html
+++ b/flx-hrp/mod-sirya-220420.html
@@ -11,15 +11,15 @@
 <!-- HEADER !-->
 <div class='header'>
   <div class='sub-head'>
-    <div class='text-holder-1'>
-      <div class='head-logo'><img width='100%' src="https://www.tadviser.ru/images/thumb/9/9e/%D0%9C%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D0%B5%D1%80%D1%81%D1%82%D0%B2%D0%BE_%D0%BE%D0%B1%D0%BE%D1%80%D0%BE%D0%BD%D1%8B_%D0%A0%D0%A4_LOGO.png/300px-%D0%9C%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D0%B5%D1%80%D1%81%D1%82%D0%B2%D0%BE_%D0%BE%D0%B1%D0%BE%D1%80%D0%BE%D0%BD%D1%8B_%D0%A0%D0%A4_LOGO.png"></div>
-    </div>
     <div>
-      <div class='text-1'>Министерство обороны<br>Российской Федерации</div>
-      <div class='text-2'>(Минобороны России)</div>
+      <div class='head-logo'><img width='100%' src="https://www.tadviser.ru/images/thumb/9/9e/%D0%9C%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D0%B5%D1%80%D1%81%D1%82%D0%B2%D0%BE_%D0%BE%D0%B1%D0%BE%D1%80%D0%BE%D0%BD%D1%8B_%D0%A0%D0%A4_LOGO.png/300px-%D0%9C%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D0%B5%D1%80%D1%81%D1%82%D0%B2%D0%BE_%D0%BE%D0%B1%D0%BE%D1%80%D0%BE%D0%BD%D1%8B_%D0%A0%D0%A4_LOGO.png"></div>
+      <div class="text-holder-1">
+       <div class='text-1'>Министерство обороны<br>Российской Федерации</div>
+       <div class='text-2'>(Минобороны России)</div>
+      </div>
     </div>
     <div class="text-holder-2">
-      <div class='text-3'> Миссия в Сирии: Борьба с международным терроризмом</div>
+      <div class='text-3'> Миссия в Сирии:<br>Борьба с международным терроризмом</div>
     </div>
   </div>
 </div>
