--- a/flx-hrp/mod-sirya-220420.html
+++ b/flx-hrp/mod-sirya-220420.html
@@ -19,7 +19,7 @@
       </div>
     </div>
     <div class="text-holder-2">
-      <div class='text-3'> Миссия в Сирии:<br>Борьба с международным терроризмом</div>
+      <div class='text-3'> <b>Миссия в Сирии:</b> Борьба с международным терроризмом</div>
     </div>
   </div>
 </div>
