--- a/flx-hrp/lisitsyn.html
+++ b/flx-hrp/lisitsyn.html
@@ -36,7 +36,7 @@
  <p><b>История:</b> Лисицын Даниил был приглашён в Организацию во время стандартного найма полевых агентов ■■/■■/2017, благодаря своему досье ВС РФ и портфолио, предоставленного МФТИ. После курса обучения основам аномального мира, Даниил был прикреплен к превентивному отделу ОТРВУ, как полевой агент, специалист по пространственным аномалиям. За время работы на данной должности, ему удалось успешно обнаружить и сообщить об 11 аномалиях, 4 из которых, Фонд позже поставил на содержание <i>(среди них: SCP-1455 - Движущаяся дверь, SCP-1022-RU - Плуг для всех полей, SCP-1255-RU - Шкатулка с секретами, SCP-1512-RU-V - Адская гиря)</i>. Некоторые из аномалий, позже не поставленных на содержание, Даниил нейтрализовал самостоятельно, без вызова группы сдерживания. Даниил Лисицын ■■/■■/2019 подал заявление о переквалификации его в оперативника группы сдерживания; пройдя группу регионального командования, руководителя полевых операций и руководителя Фонда по опергруппам, заявление было принято, Даниил был назначен в МОГ Лямбда-5 “Белые кролики”.</p>
 <div style='display: flex; font-weight: bolder;flex-direction: row;flex-wrap: nowrap;align-items: center;'>
   <p style='width: 85%;font-size: 90%;'>[ИНФОРМАЦИЯ ОБ УЧАСТИИ ЛИСИЦЫНА ДАНИИЛА В ОПЕРАЦИЯХ ФОНДА ЗАСЕКРЕЧЕНА ПОД ГРИФОМ <a href= 'https://scpfoundation.net/security-clearance-levels#toc5' style='color: #ff6d00 !important;'>СОВЕРШЕННО СЕКРЕТНО</a>]</p>
-  <div style='font-size: 90%;margin: 1em auto;text-align: center;'><a href='/flx-hrp/mod-sirya-220420'>[ПОДТВЕРДИТЬ ДОПУСК]</a></div>
+  <div style='font-size: 90%;margin: 1em auto;text-align: center;'><a href='/flx-hrp/operative-lisitsyn'>[ПОДТВЕРДИТЬ ДОПУСК]</a></div>
 </div>
  <p>По обстоятельствам, описанным в приложении 2, был смещен с поста оперативника и переназначен исследователем в научную службу. До сих пор, Лисицын работает в отделе пространственных проблем и аномальной геометрии на должности научного сотрудника. За время труда в отделе, Даниил работал со следующими объектами:</p>
  <p><span class='scp-class'><img src="https://files.scpfoundation.net/local--files/scp-list-ru/nonstandard.png" width='12px'></span><a href='/flx-hrp/scp-351-ru-v'>SCP-351-RU-V - Капкан</a></p>
@@ -46,7 +46,7 @@
    <li>Проблема классификации и понимания</li>
    <li>Отчет №351-RU-V-Альфа</li>
   </ul>
- <p><span style="text-decoration: underline;font-weight: bold;">Приложение 1:</span> в ходе боевых действий в Сирии, многие СО принимали участие в разделе остатков аномального мира Сирийской республики. ВС РФ, в которых проходил контрактную службу Лисицын Даниил, были вынуждены работать вместе с некоторыми СО, противостоя другим СО и их союзникам. Для получения полной информации нажмите здесь.</p>
+ <p><span style="text-decoration: underline;font-weight: bold;">Приложение 1:</span> в ходе боевых действий в Сирии, многие СО принимали участие в разделе остатков аномального мира Сирийской республики. ВС РФ, в которых проходил контрактную службу Лисицын Даниил, были вынуждены работать вместе с некоторыми СО, противостоя другим СО и их союзникам. Для получения полной информации <i><b><a href='/flx-hrp/mod-sirya-220420'>нажмите здесь.</a></b></i></p>
  <p><span style="text-decoration: underline;font-weight: bold;">Приложение 2:</span> во время несения службы в МОГ Лямбда-5 “Белые кролики” Фонда, в ходе операции “■■■■ ■■■■■■” был ранен в левую ключицу попаданием пули калибра .45 ACP, сломавшим её. В ходе реабилитации, было заключено, что ранение не позволит Лисицыну Даниилу далее занимать должность оперативника.</p>
 
  </div>
