--- a/flx-hrp/lisitsyn.html
+++ b/flx-hrp/lisitsyn.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.8" />
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="https://i.ibb.co/ZcBSgxt/flx-hrp.png">
-  <title>Досье - Лисицын</title>
+  <title>Личное дело - Лисицын</title>
 </head>
 <html>
 <body>
@@ -13,9 +13,12 @@
   <div class='logo-header'><img src="https://i.ibb.co/3mJ3G4h/logo.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>SCP Foundation</div><div class='text-header1'>Российский Филиал</div></div>
 </div>
 <!-- BASED !-->
-<div style='max-width: 850px;margin: auto;'><h1>Досье сотрудника: Лисицын Даниил</h1>
+<div style='max-width: 850px;margin: auto;'><h1>Личное дело канд. наук Лисицына Даниила</h1>
  <!-- SHEET !-->
  <div style="border: solid 2px #000000; padding: 1px 15px;box-shadow: 0 1px 3px rgba(0,0,0,0);margin: auto;">
+  <h2>Личное дело сотрудника Научной службы</h2>
+  <tt>Документ№: PRINCE#8040</tt>
+  <div style='width:300px;float:right;margin: 1em;'><img src="https://i.ibb.co/LS1D6Qd/department.png" width='100%' alt="department" border="0">Эмблема отдела ППиАГ</div>
   <p><b>ФИО:</b> Лисицын Даниил Уайт</p>
 
   <p><b>Уровень допуска:</b> 3</p>
