--- a/flx-hrp/lisitsyn.html
+++ b/flx-hrp/lisitsyn.html
@@ -16,9 +16,9 @@
 <div style='max-width: 850px;margin: auto;'><h1>Личное дело канд. наук Лисицына Даниила</h1>
  <!-- SHEET !-->
  <div style="border: solid 2px #000000; padding: 1px 15px;box-shadow: 0 1px 3px rgba(0,0,0,0);margin: auto;">
-  <h2>Личное дело сотрудника Научной службы</h2>
+  <h2 style="margin-bottom: 0;">Личное дело сотрудника Научной службы</h2>
   <tt>Документ№: PRINCE#8040</tt>
-  <div style='width:300px;float:right;margin: 1em;'><img src="https://i.ibb.co/LS1D6Qd/department.png" width='100%' alt="department" border="0">Эмблема отдела ППиАГ</div>
+  <div class='image-holder'><img src="https://i.ibb.co/LS1D6Qd/department.png" width='100%' alt="department" border="0">Эмблема отдела ППиАГ</div>
   <p><b>ФИО:</b> Лисицын Даниил Уайт</p>
 
   <p><b>Уровень допуска:</b> 3</p>
@@ -27,9 +27,9 @@
 
   <p><b>Место работы:</b> <b style='color: darkred;'>[ОЖИДАЕТ РАСШИФРОВКИ]</b></p>
 
-   <div class='armed-forces'><h3>Примечание #1</h3>По поступлении в ряды Фонда, Лисицын Даниил сменил свое отчество на второе имя: "Уайт". ФИО сотрудника, в данном случае, будет звучать следующим образом - Лисицын Даниил Уайт.</div>
  <p><b>Краткое описание:</b> канд. наук Лисицын - мужчина средних лет, имеет темные волосы, серые глаза, мезоморфные пропорции тела, а также весьма явный шрам на лбу, проходящий до левого виска.</p>
  <p><b>Краткая характеристика:</b> флегматик, крайне спокоен и не склонен к панике, необщителен, сторонится незнакомых людей, рассудителен и рационален. Свободное время предпочитает проводить наедине или за работой. Имеет склонности к употреблению алкоголя <i>(недостаточные для постановки диагноза)</i>. Небольшая затрудненность моторных функций левой руки <i>(см. приложение 2)</i>.</p>
+ <div class='armed-forces'><h3>Примечание #1</h3>По поступлении в ряды Фонда, Лисицын Даниил сменил свое отчество на второе имя: "Уайт". ФИО сотрудника, в данном случае, будет звучать следующим образом - Лисицын Даниил Уайт.</div>
  <p><b>Биография:</b> Родился Лисицын Даниил 25-го июля 1990-го года, в г. Нижний-Новгород, Россия. Растила Даниила мать одиночка, отец погиб когда Даниил еще был в утробе. Так как мальчик рос в окружении мамы и бабушки, им удалось воспитать его опрятным и чистоплотным, а также в большой степени неконфликтным ребенком. Начальное образование получил он в ГБОУ “Нижегородская Кадетская школа”. Стоит отметить, что тренер по физ. подготовке почти заменил отца Даниилу, развивая в мальчике недостающую твердость. Обучался там все вплоть до 5 класса, но был вынужден по семейным обстоятельствам переехать в Подмосковье, где продолжал свое обучение в МБОУ до 11 класса. По окончании школы, с отличными результатами ЕГЭ, поступил на бюджетное место в МФТИ, на направление прикладной физики. Учеба давалась Даниилу тяжело, но преподаватели отмечали у него обширные знания по профильным дисциплинам, и всячески помогали ему в обучении. Даниил потерял бюджетное место на третьем курсе, но продолжил обучение на платной основе, по тому же направлению. Лисицын получил диплом бакалавра, но решил продолжить обучение на магистра в том же МФТИ. Он успешно поступил на бюджет и занялся научной деятельностью. За все время обучения, Даниил представил 7 НИР и прилагающиеся к ним отчеты. Также участвовал в районном съезде молодых ученых с лекцией на тему “Проблемы геометризации физики”. Примерно в это же время начал писать диссертацию на эту же тему. Без трудностей закончил обучение на магистра, получил диплом и начал подготовку на получение степени кандидата физико-математических наук. Параллельно работал в порядке случайной занятости по необходимости, самый больший по продолжительности срок проработал в фирме “ООО “Электро-Лайтнинг” на должности оператора измерительного оборудования 1-категории. Получил положительное заключение по диссертации и публично защитил её, по итогу став - кандидатом физико-математических наук. В то же время решил приостановить свою исследовательскую деятельность, по личным причинам, и покинул МФТИ в 2012 году.<br>
 
  <div class='armed-forces'><h3>Примечание #2</h3>По соглашению с Министерством обороны Российской Федерации, все официальные обозначения были скрыты в целях информационной безопасности.</div>
