--- a/допрос-78-14-326.html
+++ b/допрос-78-14-326.html
@@ -32,7 +32,7 @@
 Дэниел, здравствуйте.</p>
 <p><strong>О'Флинн:</strong> Здравствуйте, сэр.</p>
 <p><strong>Мэллоу:</strong> Назовите ваше звание и должность.</p>
-<p><strong>О'Флинн:</strong> Капрал службы безопасности, часовой при КПП административного крыла Зоны 78N.</p>
+<p><strong>О'Флинн:</strong> Рядовой службы безопасности, часовой при КПП административного крыла Зоны 78N.</p>
 <p><strong>Мэллоу:</strong> Как долго вы пробыли на этой должности?</p>
 <p><strong>О'Флинн:</strong> Около полугода.</p>
 <p><strong>Мэллоу:</strong> Как долго вы работаете в Зоне 78N?</p>
