--- a/допрос-78-14-326.html
+++ b/допрос-78-14-326.html
@@ -26,7 +26,7 @@
    <h3>Протокол допроса сотрудника SO-9220-DO</h3>
 <h4>Допросчик: агент Ник Мэллоу</h4>
 <h4>Допрашиваемый: Дэниел О'Флинн</h4>
-<h4>Предмет допроса: причастность к инциденту 78N-SHINIGAMI</h4>
+<h4>Предмет допроса: причастность к инциденту 78N-SIERRA</h4>
 <div style='border: 2px dashed #525151; padding: 1em;'>
 <p><strong>Мэллоу:</strong> Оставляю пространство на записи… 3… 2… 1… Агент Мэллоу для протокола, допрос сотрудника службы безопасности Зоны 78N Дэниела О'Флинна начат в 07:38 утра 09/06/2021, с этого момента отсчитывается начало процедуры допроса.<br>
 Дэниел, здравствуйте.</p>
@@ -74,7 +74,7 @@ Now, do you believe that the upper executive staff of the Site 78N was compromis
 <p><strong>Мэллоу:</strong> Это вряд ли...<br>Агент Меллоу для протокола, допрос сотрудника службы безопасности зоны 78N Дэниела О'Флинна был окончен в 07:54 утра 09/06/2021. Оставляю пространство на записи… 3… 2… 1…</p>
 </div>
 <h3 style='margin-top: 3em;'>Примечание к допросу №78-14-326</h3>
-В ходе расследования, комиссия ОВБ по инциденту 78N-SHINIGAMI пришла к выводу, что причасность сотрудника SO-9220-DO к вышеуказанному инциденту является косвенной. Исходя из формулировки О'Флинна касательно инцидента (coup - путч), субъект, по всей видимости, и сам не знает полноту произошедшего. В словах субъекта не было найдено противоречий со следствием. Данные им показания во многом совпадают с отчётом расследования.<br>После окончания расследования, уполномоченным агентом МГРК было вынесено решение о награждении сотрудника SO-9220-DO наградным пистолетом H&K P30 9x19, в качестве поощрения за сотрудничество, лояльность и извинения за ошибочное содержание под стражей.
+В ходе расследования, комиссия ОВБ по инциденту 78N-SIERRA пришла к выводу, что причасность сотрудника SO-9220-DO к вышеуказанному инциденту является косвенной. Исходя из формулировки О'Флинна касательно инцидента (coup - путч), субъект, по всей видимости, и сам не знает полноту произошедшего. В словах субъекта не было найдено противоречий со следствием. Данные им показания во многом совпадают с отчётом расследования.<br>После окончания расследования, уполномоченным агентом МГРК было вынесено решение о награждении сотрудника SO-9220-DO наградным пистолетом H&K P30 9x19, в качестве поощрения за сотрудничество, лояльность и извинения за ошибочное содержание под стражей.
 
      </div>
  </div>
