--- a/nuthouse-19f.html
+++ b/nuthouse-19f.html
@@ -4,7 +4,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.8" />
   <link rel="stylesheet" href="code-pink.css">
   <link rel="icon" href="https://i.ibb.co/93Xb6Rb/IMG-1176.png">
-  <title>Хаб "NSFW"</title>
+  <title>Дурка 19F</title>
+</head>
+<html>
+<body>
+<div class='header'>
+  <div class='logo-header'><img src="https://i.ibb.co/93Xb6Rb/IMG-1176.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>SCP Foundation</div><div class='text-header1'>Sex Curious Project</div></div>
+</div>
+<div style='max-width: 850px;margin: auto;'><h1>Дурка 19F</h1>
 
 <p>Расшифровка:</span></strong></p>
 <p>&nbsp;</span></p>
@@ -39,21 +46,20 @@
 <p>Не договорив и оборвавшись на полуслове, Селвик застыл на месте. Перед его глазами предстала следующая картина: младший сержант Лагуза стоял перед своим столом напротив сотрудника СБ и пальцем указывал на грудастую женщину из порнографического журнала, раскрытого у него на столе.&nbsp;</span></p>
 <p>Глаза старшего НС начали медленно расширяться, пульсометр на его запястье резко начал увеличивать показатели. 90 ударов. 100 ударов. 115 ударов. И после минутной задержки лицо Селвика покраснело.</span></p>
 <p>-&nbsp;&quot;Прошу прощения за беспокойство. Я зайду позже&quot; &ndash; почти под нос пробубнил себе старший НС, после чего резко развернулся и пулей вылетел из кабинета громко хлопнув дверью.</span></p>
-<p>&nbsp;</span></p>
-<p>&nbsp;</span></p>
-<p >Глава 1. Построение.</span></strong></p>
-<p style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;margin-left:0cm;line-height:115%;font-size:15px;font-family:"Calibri",sans-serif;'><strong><span style='font-size:19px;font-family:"Times New Roman",serif;'>&nbsp;</span></strong></p>
+
+<h2>Глава 1. Построение<h2>
+
 <p>Новобранец не явился на построение, организованное сержантом СБ Чеховым. Этот старый больной засранец всегда собирал весь штат службы безопасности перед сменой возле своего кабинета и зачитывал заученные наизусть инструкции лишь для того, чтобы потешить своё самолюбие.</span></p>
 <p>Этой процедурой Чехов напрочь лишал возможности рядовых сотрудников выпить кофе перед сменой, ведь как известно в знаменитой поговорке &quot;Порно начинается с прелюдии, а смена СБ с кофе&quot;.Однако у Чехова было совсем другое мнение по этому поводу и о подобных поговорках он не слышал.&nbsp;</span></p>
 <p>Новобранец никак не мог справиться с многочисленными карабинами на своем снаряжении, словно неспособная застегнуть свой бюстгальтер нервозная девица перед первым &nbsp; свиданием, а также до сих пор не вставил магазин в табельное оружие...</span></p>
-<p>-</span><span style='font-size:16px;font-family:"Times New Roman",serif;'>&nbsp;</span><span style='font-size:16px;font-family:"Times New Roman",serif;'>&quot;Черт... у меня ничего не получается... &quot; &ndash; нервничая сказал вслух новобранец.</span></p>
+<p>-</span><span>&nbsp;</span><span>&quot;Черт... у меня ничего не получается... &quot; &ndash; нервничая сказал вслух новобранец.</span></p>
 <p>Неожиданно крепкая рука в тактической перчатке легла и сильно сдавила его плечо. Леденящий душу голос спокойно и равномерно сообщил:</span></p>
-<p>-</span><span style='font-size:16px;font-family:"Times New Roman",serif;'>&nbsp;</span><span style='font-size:16px;font-family:"Times New Roman",serif;'>&quot;Это залёт, боец. После смены зайдешь ко мне в кабинет... будем учить тебя вставлять магазин в гнездо!&quot;</span></p>
+<p>-</span><span>&nbsp;</span><span>&quot;Это залёт, боец. После смены зайдешь ко мне в кабинет... будем учить тебя вставлять магазин в гнездо!&quot;</span></p>
 <p>У новобранца выступил холодный пот на шее, сердцебиение резко участилось. Ещё немного, и он потеряет самообладание, а все потому, что этот голос невозможно было ни с чем спутать.</span></p>
 <p>Он мог принадлежать только одному человеку, и его позывной &nbsp;был &laquo;Лагуза&raquo; &nbsp;&ndash; &nbsp;он являлся младшим сержантом СБ.</span></p>
-<p>-</span><span style='font-size:16px;font-family:"Times New Roman",serif;'>&nbsp;</span><span style='font-size:16px;font-family:"Times New Roman",serif;'>&quot;Черт...кажется сегодня после смены моё гнездо разорит злобный зверь&quot; - подумал про себя новобранец.</span></p>
+<p>-</span><span>&nbsp;</span><span>&quot;Черт...кажется сегодня после смены моё гнездо разорит злобный зверь&quot; - подумал про себя новобранец.</span></p>
 <p>Лагуза резко разжал свою мертвую хватку и убрал руку с плеча бойца.</span></p>
-<p>-</span><span style='font-size:16px;font-family:"Times New Roman",serif;'>&nbsp;</span><span style='font-size:16px;font-family:"Times New Roman",serif;'>&laquo;Однако если ты сейчас же не уложишься в 2 минуты, то после смены в добавок к уже назначенным тренировкам мы также займемся проверкой твоих знаний СВТ&raquo; - сверкая глазами, словно монстр из-под кровати сообщил Лагуза.</span></p>
+<p>-</span><span>&nbsp;</span><span>&laquo;Однако если ты сейчас же не уложишься в 2 минуты, то после смены в добавок к уже назначенным тренировкам мы также займемся проверкой твоих знаний СВТ&raquo; - сверкая глазами, словно монстр из-под кровати сообщил Лагуза.</span></p>
 <p>Перспектива проведения необычайно увлекательных и продуктивных часов вместе с Лагузой тяжким грузом легла на плечи новобранца, однако что-либо менять было уже поздно. Существовала возможность лишь усугубить своё и без того бедственное положение, что шло вразрез с его планами, поэтому он ускорился настолько, насколько могли ему позволить человеческие возможности.</span></p>
 <p>Сотрудники СБ стояли в шеренгу возле кабинета Чехова и переминались с ноги на ногу, сам же сержант нервно поглядывал на свои наручные часы и с каждым движением секундной стрелки его нервная система натягивалась словно тетива лука, готовая вот вот выпустить большую отравленную стрелу кому-то в задницу.&nbsp;</span></p>
 <p>В коридоре показался новобранец, подгоняемый Лагузой. Чехов сверлил взглядом этого бойца ровно до тех пор, пока тот не споткнулся. Настроение сержанта сразу улучшилось, ведь у него появился шанс на кого-то наорать сверх нормы.</span></p>
@@ -74,9 +80,9 @@
 <p>- &quot; Придурок! Что у тебя там? &quot; &ndash; крикнул сержант пальцем указывая на промежность Рокоссовского.&nbsp;</span></p>
 <p>-&nbsp;&quot;Две боевые осколочные гранаты, сэр!&quot; - радостно ответил Рокоссовский и пафосно отдал честь.</span></p>
 <p>После этих слов в строю начался сущий кошмар...</span></p>
-<p>&nbsp;</span></p>
-<p >Глава 2. Смена.</span></strong></p>
-<p style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;margin-left:0cm;line-height:115%;font-size:15px;font-family:"Calibri",sans-serif;text-align:justify;text-indent:35.45pt;'>&nbsp;</p>
+
+<h2>Глава 2. Смена</h2>
+
 <p>Лагуза находился у входа в кабинет сержанта, Чехов в свою очередь сидел за столом яростно жестикулируя, крича что-то невразумительное, то и дело тыкая пальцем в лежащую на столе книгу &laquo;Устав СВТ&raquo;. Сотрудник СБ Рокоссовский сидел напротив сержанта закинув ногу на ногу и ковырялся в носу. Совладав со своими эмоциями, Чехов наконец начал говорить членораздельно.</span></p>
 <p>-&nbsp;&laquo;ПРИДУРОК! УРОД! Я ТЕБЕ, СУЧОНОК, УСТРОЮ ТАКОЕ, ЧТО ТЕБЯ МАТЬ РОДНАЯ НЕ УЗНАЕТ!&raquo; - с красным лицом прокричал сержант, при этом заплёвывая всё, что было на столе и тут же у него началась серьезная одышка. Именно в эту паузу Рокоссовский успел вставить своё колкое мнение.</span></p>
 <p>-&nbsp;&laquo;Сержант, разрешите обратиться! Вас в таком виде и ВАША мать не узнала бы&quot;...</span></p>
@@ -120,7 +126,7 @@
 <p>-&nbsp;&laquo;Чтооо?!&raquo; - позади послышался возмущенный крик Селвика, но сотрудники СБ уже перешагнули порог кабинета.</span></p>
 <p>-&nbsp;&laquo;Не подходите! Иначе я вскрою ему глотку!&raquo; - уверенно прокричал сотрудник Фриман при этом крепче вдавил канцелярский нож в шею Кацураги.</span></p>
 <p>-&nbsp;&laquo;Тихо, тихо, успокойся и расскажи, что случилось?&raquo; - сразу на мировую пошёл Священник. Хелл в этот момент облокотился на стену и, сложив руки крест на крест, стал наблюдать за происходящим.</span></p>
-<p>- &laquo;Я&hellip;я&hellip;не могу больше этого терпеть! Они в очередной раз написали на моей карте доступа фразу &laquo;Когда&nbsp;</span><span style='font-size:16px;font-family:"Times New Roman",serif;'>Half</span><span style='font-size:16px;font-family:"Times New Roman",serif;'>&nbsp;</span><span style='font-size:16px;font-family:"Times New Roman",serif;'>Life</span><span style='font-size:16px;font-family:"Times New Roman",serif;'>&nbsp;3?&raquo;. Я не знаю, что это значит, и они мешают мне работать! Они везде это пишут! На моих документах, на моих отчётах, на моих картах доступа, даже на файлах в рабочем компьютере! И ВСЕМ ПЛЕВАТЬ! ВСЕМ Я ГОВОРИЛ ЭТОМУ БОЛВАНУ СЕЛВИКУ! НО ОН НЕ СЛУШАЛ! МОЁ ТЕРПЕНИЕ ЛОПНУЛО Я ТРЕБУЮ К СЕБЕ УВАЖЕНИЯ!&raquo; - постепенно повышая голос рассказал причину такого поведения Фриман, его нервы явно были на пределе.</span></p>
+<p>- &laquo;Я&hellip;я&hellip;не могу больше этого терпеть! Они в очередной раз написали на моей карте доступа фразу &laquo;Когда&nbsp;</span><span>Half</span><span>&nbsp;</span><span>Life</span><span>&nbsp;3?&raquo;. Я не знаю, что это значит, и они мешают мне работать! Они везде это пишут! На моих документах, на моих отчётах, на моих картах доступа, даже на файлах в рабочем компьютере! И ВСЕМ ПЛЕВАТЬ! ВСЕМ Я ГОВОРИЛ ЭТОМУ БОЛВАНУ СЕЛВИКУ! НО ОН НЕ СЛУШАЛ! МОЁ ТЕРПЕНИЕ ЛОПНУЛО Я ТРЕБУЮ К СЕБЕ УВАЖЕНИЯ!&raquo; - постепенно повышая голос рассказал причину такого поведения Фриман, его нервы явно были на пределе.</span></p>
 <p>-&nbsp;&laquo;Боже, это просто шутка. Ты что, с ума сошёл делать такое?&raquo; - прошептал Кацураги.</span></p>
 <p>-&nbsp;&laquo;Иди в ЖОПУ! И ВЫ ИДИТЕ В ЖОПУ ВСЕ!&raquo; - тут же закричал Фриман и поправил нож у шеи Кацураги.</span></p>
 <p>-&nbsp;&laquo;Подожди, можно всё решить. Давай, убери нож и мы обо всём договоримся. Тебя больше никто не тронет&raquo; - продолжал Священник пытаясь подойти ближе.</span></p>
@@ -144,3 +150,12 @@
 <p>-&nbsp;&laquo;Как же так? Это немыслимо! Такого просто не может быть!&raquo; - приговаривал доктор пока Фриман продолжал изливать душу. Закончив свой рассказ, Фриман повернул голову в сторону доктора:</span></p>
 <p>-&nbsp;&laquo;Ну, чё там, док?&raquo; - с надеждой спросил фриман. Доктор вскинул одну бровь и почесал подбородок.</span></p>
 <p>- &laquo;Расклад не очень, честно говоря&raquo; - медленно проговорил доктор. К своему сожалению, Фриман не видел, что на экране у доктора уже давно была запущена игра &laquo;Пасьянс&raquo; и все его высказывания были направлены сугубо на то, что он не мог сложить колоду&hellip;</span></p>
+
+<p style='font-size:70%; text-align:right;'><strong>Автор:</strong> AlexandrHell
+<hr>
+<div style="text-align: center;font-size:80%; font-weight: bolder;">
+<p>« <a href='/code-pink'>Часть 1: "Прибытие"</a> | Часть 2: "Влечение"</p></div>
+
+</div>
+</body>
+</html>
