--- a/nuthouse-19f.html
+++ b/nuthouse-19f.html
@@ -13,8 +13,8 @@
 </div>
 <div style='max-width: 850px;margin: auto;'><h1>Дурка 19F</h1>
 
-<p>Расшифровка:</span></strong></p>
-<p>&nbsp;</span></p>
+<h2>Расшифровка:</h2>
+
 <p>СБ &ndash; Служба безопасности;</span></p>
 <p>СВТ &ndash; Служба внутреннего трибунала;</span></p>
 <p>НС &ndash; научный сотрудник;</span></p>
@@ -47,7 +47,7 @@
 <p>Глаза старшего НС начали медленно расширяться, пульсометр на его запястье резко начал увеличивать показатели. 90 ударов. 100 ударов. 115 ударов. И после минутной задержки лицо Селвика покраснело.</span></p>
 <p>-&nbsp;&quot;Прошу прощения за беспокойство. Я зайду позже&quot; &ndash; почти под нос пробубнил себе старший НС, после чего резко развернулся и пулей вылетел из кабинета громко хлопнув дверью.</span></p>
 
-<h2>Глава 1. Построение<h2>
+<h2>Глава 1. Построение</h2>
 
 <p>Новобранец не явился на построение, организованное сержантом СБ Чеховым. Этот старый больной засранец всегда собирал весь штат службы безопасности перед сменой возле своего кабинета и зачитывал заученные наизусть инструкции лишь для того, чтобы потешить своё самолюбие.</span></p>
 <p>Этой процедурой Чехов напрочь лишал возможности рядовых сотрудников выпить кофе перед сменой, ведь как известно в знаменитой поговорке &quot;Порно начинается с прелюдии, а смена СБ с кофе&quot;.Однако у Чехова было совсем другое мнение по этому поводу и о подобных поговорках он не слышал.&nbsp;</span></p>
