--- a/nuthouse-19f.html
+++ b/nuthouse-19f.html
@@ -154,7 +154,7 @@
 <p style='font-size:70%; text-align:right;'><strong>Автор:</strong> AlexandrHell
 <hr>
 <div style="text-align: center;font-size:80%; font-weight: bolder;">
-<p>« <a href='/code-pink'>Часть 1: "Прибытие"</a> | Часть 2: "Влечение"</p></div>
+<p>« <a href='/nsfw-hub'>Главная</a> | Дурка 19F</p></div>
 
 </div>
 </body>
